# qrc

./: Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml  release.yml
src/: decode.rs  encode.rs  main.rs  screenshot.rs
