[package]
name = "qrc"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["blocking", "native-tls"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "bmp", "webp"] }
rqrr = "0.8"
xcap = "0.9"

eframe = { version = "0.34", default-features = false, features = ["default_fonts", "glow"] }
qrcode = "0.14.1"

[profile.release]
strip = true
lto = true
opt-level = "z"
codegen-units = 1
